--- a/blog7.html
+++ b/blog7.html
@@ -5,6 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Role of AI in Cybersecurity</title>
     <link rel="stylesheet" href="style.css">
+     <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f3f4f6;
+      color: #333;
+    }
+    header {
+      background-color: #0f172a;
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    header p {
+      font-size: 1.1em;
+      margin-top: 10px;
+    }
+    main {
+      max-width: 850px;
+      margin: 40px auto;
+      padding: 25px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.06);
+    }
+    h2 {
+      color: #1f2937;
+      margin-top: 1.5em;
+    }
+    p {
+      line-height: 1.7;
+      margin-top: 1em;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    li {
+      margin-bottom: 10px;
+    }
 </head>
 <body>
     <header>
@@ -26,9 +70,41 @@
 
     <main>
         <section class="container">
-            <h2>The Role of AI in Cybersecurity</h2>
-            <!-- Blog post content goes here -->
-            <p>This is a placeholder for the blog post content.</p>
+           <h1>The Role of AI in Cybersecurity</h1>
+    <p>How Artificial Intelligence is Strengthening Digital Defenses</p>
+  </header>
+
+  <main>
+    <p>As cyber threats grow more complex and frequent, traditional security methods often fall short. This is where Artificial Intelligence (AI) steps in, transforming cybersecurity by detecting threats faster, predicting attacks, and automating responses. But how exactly is AI changing the security landscape?</p>
+
+    <h2>1. Threat Detection in Real-Time</h2>
+    <p>AI can analyze massive volumes of network data in real time to detect anomalies, patterns, and malicious behavior. Unlike rule-based systems, AI models learn from experience, allowing them to identify new and previously unknown threats—often referred to as zero-day attacks.</p>
+
+    <h2>2. Predictive Analytics</h2>
+    <p>By analyzing historical data, AI can anticipate potential security breaches before they happen. This proactive approach helps organizations strengthen vulnerable systems, detect phishing attempts, and avoid costly breaches.</p>
+
+    <h2>3. Automation of Security Operations</h2>
+    <p>AI enables Security Operations Centers (SOCs) to automate routine tasks such as log analysis, intrusion detection, and incident response. This reduces the workload on human analysts and speeds up reaction times during active threats.</p>
+
+    <h2>4. Behavior-Based Authentication</h2>
+    <p>AI can enhance identity and access management by recognizing user behavior patterns—like typing speed, mouse movements, or login times. If the behavior suddenly changes, the system can flag it as suspicious and trigger multi-factor authentication.</p>
+
+    <h2>5. Email and Phishing Protection</h2>
+    <p>AI filters out phishing emails more accurately than traditional spam filters. By analyzing email content, sender reputation, and user behavior, AI can block advanced spear-phishing attacks before they reach the inbox.</p>
+
+    <h2>6. Challenges and Ethical Concerns</h2>
+    <p>Despite its benefits, AI in cybersecurity poses challenges. Hackers are also using AI to launch smarter attacks. There’s also the risk of false positives, bias in algorithms, and over-reliance on automation. Ethical AI development and human oversight are essential.</p>
+
+    <h2>Benefits of AI in Cybersecurity</h2>
+    <ul>
+      <li><strong>Faster threat detection and response</strong></li>
+      <li><strong>Reduction in manual workload for IT teams</strong></li>
+      <li><strong>Improved accuracy with fewer false alarms</strong></li>
+      <li><strong>Scalability to protect large and complex networks</strong></li>
+    </ul>
+
+    <h2>Conclusion</h2>
+    <p>AI is becoming a vital ally in the fight against cybercrime. Its ability to process vast data, adapt to new threats, and respond in real time makes it a cornerstone of modern cybersecurity strategies. However, its deployment must be balanced with transparency, ethics, and continued human expertise.</p>
         </section>
     </main>
 
