--- a/blog10.html
+++ b/blog10.html
@@ -70,15 +70,8 @@
     </header>
 
     <main>
-        <section class="container">
-            <img src="u.jpg" alt=""class="blog-post-image" length="4px breath="3px">
-            <div class="blog-meta">
-                <img src="WIN_20230618_11_09_31_Pro.jpg" alt="Writer Image" class="writer-image">
-                <div>
-                    <strong>By: ARJUN KUMAR SINGH</strong><br>
-                    <span style="color:#777;font-size:0.95em;">Published: may 10, 2025</span>
-                </div>
-            </div>
+        <section class="container"> 
+            <h1>AI in Everyday Life: Hidden Applications</h1>
   </header>
   <main>
     <p>When we think of Artificial Intelligence (AI), we often imagine robots or self-driving cars. But AI isn’t just something out of science fiction—it's woven into the fabric of our everyday lives, often without us realizing it. From personalized recommendations to fraud detection, AI works silently in the background, improving convenience, safety, and productivity.</p>
