--- a/blog1.html
+++ b/blog1.html
@@ -5,6 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Future of AI: A New Era of Possibilities</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9fafb;
+      color: #1f2937;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #111827;
+      color: #ffffff;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    header p {
+      font-size: 1.1em;
+      margin-top: 10px;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+    }
+    h2 {
+      margin-top: 1.5em;
+      color: #111827;
+    }
+    p {
+      line-height: 1.7;
+      margin-top: 1em;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 10px;
+    } 
+  </style>
 </head>
 <body>
     <header>
@@ -26,15 +71,9 @@
 
     <main>
         <section class="container">
-            <img src="u.jpg" alt=""class="blog-post-image" length="4px breath="3px">
-            <div class="blog-meta">
-                <img src="WIN_20230618_11_09_31_Pro.jpg" alt="Writer Image" class="writer-image">
-                <div>
-                    <strong>By: ARJUN KUMAR SINGH</strong><br>
-                    <span style="color:#777;font-size:0.95em;">Published: may 10, 2025</span>
-                </div>
+           
             </div>
-            <h2>The Future of AI: A New Era of Possibilities</h2>
+            <h1>The Future of AI: A New Era of Possibilities</h1>
             <!-- Blog post content goes here -->
             <p>Artificial Intelligence (AI) is no longer a distant dream. It is the present—and it's shaping the future faster than we ever imagined. From self-driving cars to AI-powered virtual assistants, we're already seeing how this technology is changing the world. But what lies ahead? And why should you care?
 
