--- a/blog2.html
+++ b/blog2.html
@@ -5,6 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Future of AI: A New Era of Possibilities</title>
     <link rel="stylesheet" href="style.css">
+      <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9fafb;
+      color: #1f2937;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #111827;
+      color: #ffffff;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    header p {
+      font-size: 1.1em;
+      margin-top: 10px;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+    }
+    h2 {
+      margin-top: 1.5em;
+      color: #111827;
+    }
+    p {
+      line-height: 1.7;
+      margin-top: 1em;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+          </style>
 </head>
 <body>
     <header>
@@ -26,14 +71,6 @@
 
     <main>
         <section class="container">
-            <img src="u.jpg" alt=""class="blog-post-image" length="4px breath="3px">
-            <div class="blog-meta">
-                <img src="WIN_20230618_11_09_31_Pro.jpg" alt="Writer Image" class="writer-image">
-                <div>
-                    <strong>By: ARJUN KUMAR SINGH</strong><br>
-                    <span style="color:#777;font-size:0.95em;">Published: may 10, 2025</span>
-                </div>
-            </div>
             <h1>Understanding Machine Learning: A Beginner’s Guide</h1>
 
   <p>Have you ever wondered how Netflix recommends your favorite shows? Or how your phone recognizes your face? Behind the scenes, one powerful concept is working its magic: <strong>Machine Learning</strong>.</p>
