--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
             </div>
         </section>
     </main>
+    <div class="thought-card">
+    <h2>Thought of the Day</h2>
+    <p>"Success is not final, failure is not fatal: It is the courage to continue that counts."</p>
+    <div class="author">— Winston Churchill</div>
+  </div>
+
 
     <footer>
         <div class="container">
