--- a/index.html
+++ b/index.html
@@ -117,16 +117,15 @@
                 </div>
                 <!-- Add more product cards as needed -->
             </div>
+             <div class="thought-card">
+                <img src="placeholder-thought.jpg" alt="Thought Image" class="thought-image">
+                <h2>Thought of the Day</h2>
+                <p>"Success is not final, failure is not fatal: It is the courage to continue that counts."</p>
+                <div class="author">— Winston Churchill</div>
+              </div>
         </section>
     </main>
-    <div class="thought-card">
-    <h2>Thought of the Day</h2>
-    <p>"Success is not final, failure is not fatal: It is the courage to continue that counts."</p>
-    <div class="author">— Winston Churchill</div>
-  </div>
-
-
-    <footer>
+      <footer>
         <div class="container">
             <p>Founder: Arjun Kumar Singh</p>
              <p><a href="https://www.jotform.com/agent/019706b0724c723580964dcba0c0c756daf0" class="chatbot-link">Chat with us</a></p>
