--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                 <!-- Add more product cards as needed -->
             </div>
              <div class="thought-card">
-                <img src="placeholder-thought.jpg" alt="Thought Image" class="thought-image">
-                <h2>Thought of the Day</h2>
-                <p>"Success is not final, failure is not fatal: It is the courage to continue that counts."</p>
-                <div class="author">— Winston Churchill</div>
+                <img src="placeh.jpg" alt="Thought Image" class="thought-image">
+                <h2>From the Mind of Tomorrow</h2>
+                <p>"In the future, people who work together with AI won't just take over jobs — they will change what it means to be human"</p>
+                <div class="author">— Arjun Kumar Singh</div>
               </div>
         </section>
     </main>
