--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <!-- Add more product cards as needed -->
             </div>
              <div class="thought-card">
-                <img src="placeh.jpg" alt="Thought Image" class="thought-image">
+                <img src="6.jpg" alt="Thought Image" class="thought-image">
                 <h2>From the Mind of Tomorrow</h2>
                 <p>"In the future, people who work together with AI won't just take over jobs — they will change what it means to be human"</p>
                 <div class="author">— Arjun Kumar Singh</div>
