--- a/blog5.html
+++ b/blog5.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How AI is Transforming the Job Market</title>
+    <link rel="icon" type="image.jpg" href="/image.jpg">
     <link rel="stylesheet" href="style.css">
      <style>
     body {
