--- a/blog3.html
+++ b/blog3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI in Education: Tools and Trends</title>
+    <link rel="icon" type="image.jpg" href="/image.jpg">
     <link rel="stylesheet" href="style.css">
     <style>
     body {
