--- a/blog1.html
+++ b/blog1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image.jpg" href="/image.jpg">
     <title>The Future of AI: A New Era of Possibilities</title>
     <link rel="stylesheet" href="style.css">
     <style>
