--- a/ai-bonus-tools.html
+++ b/ai-bonus-tools.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Bonus Tools</title>
-    <link rel="stylesheet" href="modern-table.css">
+   <link rel="icon" type="image.jpg" href="/image.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
