--- a/ai-productivity-tools.html
+++ b/ai-productivity-tools.html
@@ -144,6 +144,12 @@
                         <td>Free / $5/mo (add-on)</td>
                         <td><a class="tool-link" href="https://clickup.com/ai" target="_blank">Visit</a></td>
                     </tr>
+                     <tr>
+                        <td>stitch</td>
+                        <td>UI AND UX design </td>
+                        <td>Free (add-on)</td>
+                        <td><a class="tool-link" href="https://stitch.withgoogle.com/" target="_blank">Visit</a></td>
+                    </tr>
                 </tbody>
             </table>
         </section>
