--- a/ai-agent-tools.html
+++ b/ai-agent-tools.html
@@ -229,6 +229,32 @@
                         <td class="price">Free & Paid</td>
                         <td><a href="https://crewai.com/" target="_blank" class="tool-link">Visit Tool</a></td>
                     </tr>
+                     <tr>
+                        <td>Deep Agent</td>
+                        <td>AI-powered team collaboration and productivity platform.</td>
+                        <td>
+                            <ul class="features">
+                                <li>AI task management</li>
+                                <li>Productivity analytics</li>
+                                <li>Integration with popular tools</li>
+                            </ul>
+                        </td>
+                        <td class="price">Free & Paid</td>
+                        <td><a href="https://deepagent.abacus.ai/" target="_blank" class="tool-link">Visit Tool</a></td>
+                    </tr>
+                       <tr>
+                        <td>Trae AI </td>
+                        <td>AI-powered team collaboration and productivity platform.</td>
+                        <td>
+                            <ul class="features">
+                                <li>AI task management</li>
+                                <li>Productivity analytics</li>
+                                <li>Integration with popular tools</li>
+                            </ul>
+                        </td>
+                        <td class="price">Free & Paid</td>
+                        <td><a href="https://www.trae.ai/" target="_blank" class="tool-link">Visit Tool</a></td>
+                    </tr>
                 </tbody>
             </table>
         </section>
