--- a/ai-agent-tools.html
+++ b/ai-agent-tools.html
@@ -255,6 +255,19 @@
                         <td class="price">Free & Paid</td>
                         <td><a href="https://www.trae.ai/" target="_blank" class="tool-link">Visit Tool</a></td>
                     </tr>
+                    <tr>
+                        <td>Vapi </td>
+                        <td>AI-powered team collaboration and productivity platform.</td>
+                        <td>
+                            <ul class="features">
+                                <li>VOoice ai agent</li>
+                                <li>Productivity analytics</li>
+                                <li>Integration with popular tools</li>
+                            </ul>
+                        </td>
+                        <td class="price">Free & Paid</td>
+                        <td><a href="https://vapi.ai//" target="_blank" class="tool-link">Visit Tool</a></td>
+                    </tr>
                 </tbody>
             </table>
         </section>
