--- a/ai-agent-tools.html
+++ b/ai-agent-tools.html
@@ -260,7 +260,7 @@
                         <td>AI-powered team collaboration and productivity platform.</td>
                         <td>
                             <ul class="features">
-                                <li>VOoice ai agent</li>
+                                <li>Voice ai agent</li>
                                 <li>Productivity analytics</li>
                                 <li>Integration with popular tools</li>
                             </ul>
